--- a/danhmuc.html
+++ b/danhmuc.html
@@ -66,6 +66,9 @@
             <li style="color:#E56662;"><i class="fa-solid fa-phone-volume" style="color: #E56662;"></i>Hotline:
                 0210.650.50.50</li>
         </div>
+        <div class="menu-toggle">
+            <i class="fa-solid fa-bars"></i>
+        </div>
         <div class="other_menu">
             <li>
                 <div class="search-wrapper">
