--- a/danhmuc.html
+++ b/danhmuc.html
@@ -23,48 +23,52 @@
     <!--KHU VỰC ĐẦU TRANG-->
     <header>
         <div class="logo">
-            <a href="index.html"><img src="tài nguyên/logo.png" alt="Mua điện thoại tại Smartphone QR"></a>
+            <a href="index.html"><img src="tai_nguyen/logoweb.png" alt="Mua điện thoại tại Smartphone QR"></a>
         </div>
         <div class="menu">
-            <li><a href=""><i class="fa-solid fa-mobile-screen"></i>Điện thoại</a></li>
-            <li><a href=""><i class="fa-solid fa-laptop"></i>Laptop</a> </li>
-            <li><a href=""><i class="fa-solid fa-tablet-screen-button"></i>Máy tính bảng</a> </li>
-            <li><a href=""><i class="fa-solid fa-headphones-simple"></i>Phụ kiện</a>
+            <li><a href="danhmuc.html"><i class="fa-solid fa-mobile-screen"></i>Điện thoại</a></li>
+            <li><a href="danhmuc.html"><i class="fa-solid fa-laptop"></i>Laptop</a> </li>
+            <li><a href="danhmuc.html"><i class="fa-solid fa-tablet-screen-button"></i>Máy tính bảng</a> </li>
+            <li><a href="danhmuc.html"><i class="fa-solid fa-headphones-simple"></i>Phụ kiện</a>
                 <ul class="submenu">
-                    <li class="category"><a href="">Phụ kiện máy tính</a>
-                    <li class="item"><a href=""><img src="san_pham/chuot_head.png">Chuột có dây/Chuột Bluetooth</a>
-                    <li class="item"><a href=""><img src="san_pham/tainghe_head.png">Tai nghe</a>
-                    <li class="item"><a href=""><img src="san_pham/micro_head.png">Micro</a>
-                    <li class="item"><a href=""><img src="san_pham/balo_head.png">Balo/Túi chống sốc</a>
-                    <li class="item"><a href=""><img src="san_pham/office_head.png">Phần mềm bản quyền</a>
-                    <li class="item"><a href=""><img src="san_pham/pkmt_head.png">Xem thêm...</a>
+                    <li class="category"><a href="danhmuc.html">Phụ kiện máy tính</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/chuot_head.png">Chuột có dây/Chuột
+                            Bluetooth</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/tainghe_head.png">Tai nghe</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/micro_head.png">Micro</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/balo_head.png">Balo/Túi chống sốc</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/office_head.png">Phần mềm bản quyền</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/pkmt_head.png">Xem thêm...</a>
                     <li class="category"><a href="">Phụ kiện điện thoại</a>
-                    <li class="item"><a href=""><img src="san_pham/pindp_head.jpg">Pin dự phòng</a>
-                    <li class="item"><a href=""><img src="san_pham/oplung_head.jpg">Ốp lưng</a>
-                    <li class="item"><a href=""><img src="san_pham/daysac_head.jpg">Dây sạc</a>
-                    <li class="item"><a href=""><img src="san_pham/pkdt_head.jpg">Xem thêm...</a>
-                    <li class="category"><a href="">Loa</a>
-                    <li class="item"><a href=""><img src="san_pham/loajbl_head.jpg">JBL</a>
-                    <li class="item"><a href=""><img src="san_pham/loakeo_head.jpg">Loa kéo</a>
-                    <li class="item"><a href=""><img src="san_pham/loamt_head.png">Loa cho máy tính để bàn </a>
-                    <li class="item"><a href=""><img src="san_pham/loamini_head.jpg">Loa Bluetooth cầm tay</a>
-                    <li class="category"><a href="">Các sản phẩm khác</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/pindp_head.jpg">Pin dự phòng</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/oplung_head.jpg">Ốp lưng</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/daysac_head.jpg">Dây sạc</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/pkdt_head.jpg">Xem thêm...</a>
+                    <li class="category"><a href="danhmuc.html">Loa</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/loajbl_head.jpg">JBL</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/loakeo_head.jpg">Loa kéo</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/loamt_head.png">Loa cho máy tính để bàn
+                        </a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/loamini_head.jpg">Loa Bluetooth cầm
+                            tay</a>
+                    <li class="category"><a href="danhmuc.html">Các sản phẩm khác</a>
                 </ul>
             </li>
-            <li><a href=""><i class="fa-solid fa-stopwatch"></i>Đồng hồ</a> </li>
-            <li><a href=""><i class="fa-solid fa-screwdriver-wrench"></i>Sửa chữa</a>
+            <li><a href="danhmuc.html"><i class="fa-solid fa-stopwatch"></i>Đồng hồ</a> </li>
+            <li><a href="danhmuc.html"><i class="fa-solid fa-screwdriver-wrench"></i>Sửa chữa</a>
                 <ul class="submenu">
                     <li class="category"><a href="">Sửa chữa điện thoại</a>
-                    <li class="item"><a href=""><img src="san_pham/suapin_head.jpg">Thay pin chính hãng</a>
-                    <li class="item"><a href=""><img src="san_pham/sualung_head.jpg">Thay kính lưng</a>
-                    <li class="item"><a href=""><img src="san_pham/suamanhinh__head.jpg">Thay màn hình</a>
-                    <li class="item"><a href=""><img src="san_pham/suacamera_head.jpg">Sửa camera/FaceID</a>
-                    <li class="item"><a href=""><img src="san_pham/thaykinh_head.jpg">Tất cả dịch vụ...</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/suapin_head.jpg">Thay pin chính hãng</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/sualung_head.jpg">Thay kính lưng</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/suamanhinh__head.jpg">Thay màn hình</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/suacamera_head.jpg">Sửa camera/FaceID</a>
+                    <li class="item"><a href="danhmuc.html"><img src="san_pham/thaykinh_head.jpg">Tất cả dịch vụ...</a>
                 </ul>
             </li>
 
             <li style="color:#E56662;"><i class="fa-solid fa-phone-volume" style="color: #E56662;"></i>Hotline:
                 0210.650.50.50</li>
+
         </div>
         <div class="menu-toggle">
             <i class="fa-solid fa-bars"></i>
@@ -77,8 +81,8 @@
 
                 </div>
             </li>
-            <li><a href=""><img src="tài nguyên/shop.png"></a></li>
-            <li><a href=""><img src="tài nguyên/user.png"></a></li>
+            <li><a href=""><img src="tai_nguyen/shopweb.png"></a></li>
+            <li><a href=""><img src="tai_nguyen/userweb.png"></a></li>
         </div>
     </header>
     <!--KHU VỰC DANH MỤC-->
@@ -511,17 +515,18 @@
                 <input type="text" placeholder="Bạn cần tư vấn dịch vụ nào...">
                 <button>Đăng ký</button>
                 <h3><i class="fa-solid fa-link"></i>LIÊN KẾT</h3>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_fb.png"><a
-                        href="https://www.facebook.com/SmartphoneQuanRau" target="_blank">Smartphone Quân Râu</a></li>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_tiktok.jpg"><a
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_fb.png"><a
+                        href="https://www.facebook.com/SmartphoneQuanRau" target="_blank">Smartphone Quân Râu</a>
+                </li>
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_tiktok.jpg"><a
                         href="https://www.tiktok.com/@smartphone.quanrau?is_from_webapp=1&sender_device=pc"
                         target="_blank" style="font-style:italic;">Smartphone Quân Râu</a></li>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_zalo.png"><a href=""
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_zalo.png"><a href=""
                         target="_blank">0971776555</a>
                 </li>
             </div>
             <div class="footer_content_col">
-                <img src="tài nguyên/gioithieu_logo.png" style="margin-top: 50px;">
+                <img src="tai_nguyen/gioithieu_logo.png" style="margin-top: 50px;">
                 <p style="font-style: italic;">Website được phát triển bởi congchiss.it@gmail.com</p>
             </div>
         </div>
