--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </div>
     <p class="text_chat">Liên hệ với chúng tôi tại đây!</p>
     <div class="chat-popup" id="chatPopup">
-        <a href="#"><img src="tài nguyên/logo_zalo.png" alt="Zalo"> Zalo</a>
-        <a href="#"><img src="tài nguyên/logo_fb.png" alt="Điện thoại"> Facebook</a>
+        <a href="#"><img src="tai_nguyen/logo_zalo.png" alt="Zalo"> Zalo</a>
+        <a href="#"><img src="tai_nguyen/logo_fb.png" alt="Điện thoại"> Facebook</a>
     </div>
     <!--KHU VỰC ĐẦU TRANG-->
     <header>
         <div class="logo">
-            <a href="index.html"><img src="tài nguyên/logo.png" alt="Mua điện thoại tại Smartphone QR"></a>
+            <a href="index.html"><img src="tai_nguyen/logoweb.png" alt="Mua điện thoại tại Smartphone QR"></a>
         </div>
         <div class="menu">
             <li><a href="danhmuc.html"><i class="fa-solid fa-mobile-screen"></i>Điện thoại</a></li>
@@ -81,8 +81,8 @@
 
                 </div>
             </li>
-            <li><a href=""><img src="tài nguyên/shop.png"></a></li>
-            <li><a href=""><img src="tài nguyên/user.png"></a></li>
+            <li><a href=""><img src="tai_nguyen/shopweb.png"></a></li>
+            <li><a href=""><img src="tai_nguyen/userweb.png"></a></li>
         </div>
     </header>
     <!--- KHU VỰC QUẢNG CÁO, GIỚI THIỆU ƯU ĐÃI-->
@@ -92,14 +92,14 @@
                 <div class="slide_content_left">
                     <div class="slide_content_left_top_container">
                         <div class="slide_content_left_top">
-                            <a href=""><img src="tài nguyên/salecoffe.png"
+                            <a href=""><img src="tai_nguyen/salecoffe.png"
                                     alt="Ưu đãi tại Cà phê QR khi mua sắm tại Smartphone Quân Râu"></a>
-                            <a href=""><img src="tài nguyên/salebida.jpg"
+                            <a href=""><img src="tai_nguyen/salebida.jpg"
                                     alt="Ưu đãi tại Bida QR khi mua sắm tại Smartphone Quân Râu"></a>
-                            <a href=""><img src="tài nguyên/salefilm.png"
+                            <a href=""><img src="tai_nguyen/salefilm.png"
                                     alt="Ưu đãi tại QR Phim 3D khi mua sắm tại Smartphone Quân Râu"></a>
-                            <a href=""><img src="tài nguyên/qc1.jpg" alt="Thay pin đồng giá"></a>
-                            <a href=""><img src="tài nguyên/qc5.png" alt="Thưởng 500k cho sĩ tử"></a>
+                            <a href=""><img src="tai_nguyen/qc1.jpg" alt="Thay pin đồng giá"></a>
+                            <a href=""><img src="tai_nguyen/qc5.png" alt="Thưởng 500k cho sĩ tử"></a>
                         </div>
                         <div class="slide_content_left_top_btn">
                             <i class="fa-solid fa-chevron-left"></i>
@@ -117,10 +117,10 @@
                     </div>
                 </div>
                 <div class="slide_content_right">
-                    <li><a href=""><img src="tài nguyên/sale2.jpg"></a></li>
-                    <li><a href=""><img src="tài nguyên/sale3.jpg"></a></li>
-                    <li><a href=""><img src="tài nguyên/sale4.jpg"></a></li>
-                    <li><a href=""><img src="tài nguyên/sale1.jpg"></a></li>
+                    <li><a href=""><img src="tai_nguyen/sale2.jpg"></a></li>
+                    <li><a href=""><img src="tai_nguyen/sale3.jpg"></a></li>
+                    <li><a href=""><img src="tai_nguyen/sale4.jpg"></a></li>
+                    <li><a href=""><img src="tai_nguyen/sale1.jpg"></a></li>
                 </div>
             </div>
         </div>
@@ -389,10 +389,10 @@
                     <h1><i class="fa-solid fa-gift"></i>CHƯƠNG TRÌNH ƯU ĐÃI</h1>
                 </div>
                 <div class="chuongtrinh_uudai_content_items_contain">
-                    <img src="tài nguyên/sale1.jpg" alt="Chương trình ưu đãi">
-                    <img src="tài nguyên/sale2.jpg" alt="Chương trình ưu đãi">
-                    <img src="tài nguyên/sale3.jpg" alt="Chương trình ưu đãi">
-                    <img src="tài nguyên/sale4.jpg" alt="Chương trình ưu đãi">
+                    <img src="tai_nguyen/sale1.jpg" alt="Chương trình ưu đãi">
+                    <img src="tai_nguyen/sale2.jpg" alt="Chương trình ưu đãi">
+                    <img src="tai_nguyen/sale3.jpg" alt="Chương trình ưu đãi">
+                    <img src="tai_nguyen/sale4.jpg" alt="Chương trình ưu đãi">
                 </div>
             </div>
 
@@ -407,7 +407,7 @@
                     hàng điện
                     thoại và phụ kiện hàng đầu trên thị trường. Chúng tôi không chỉ là nơi để bạn có thể tìm thấy sản
                     phẩm mới nhất và chất lượng, mà còn là địa chỉ uy tín với các dịch vụ sửa chữa đi kèm.</p>
-                <img src="tài nguyên/logo.png" alt="Bạn cần gì - Smartphone Quân Râu có">
+                <img src="tai_nguyen/logoweb.png" alt="Bạn cần gì - Smartphone Quân Râu có">
                 <p>Hơn 10 năm hoạt động trong thị trường smartphone, đến nay Smartphone Quân Râu đã có 7 chi nhánh
                     khắp thành phố Việt Trì và tỉnh Phú Thọ, đồng thời phát triển cả nền tảng mua bạn trực tuyến giúp
                     bạn trải nghiệm dịch vụ của Smartphone Quân Râu mọi lúc mọi nơi. Chúng tôi không chỉ kinh doanh
@@ -496,17 +496,17 @@
                 <input type="text" placeholder="Bạn cần tư vấn dịch vụ nào...">
                 <button>Đăng ký</button>
                 <h3><i class="fa-solid fa-link"></i>LIÊN KẾT</h3>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_fb.png"><a
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_fb.png"><a
                         href="https://www.facebook.com/SmartphoneQuanRau" target="_blank">Smartphone Quân Râu</a></li>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_tiktok.jpg"><a
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_tiktok.jpg"><a
                         href="https://www.tiktok.com/@smartphone.quanrau?is_from_webapp=1&sender_device=pc"
                         target="_blank" style="font-style:italic;">Smartphone Quân Râu</a></li>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_zalo.png"><a href=""
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_zalo.png"><a href=""
                         target="_blank">0971776555</a>
                 </li>
             </div>
             <div class="footer_content_col">
-                <img src="tài nguyên/gioithieu_logo.png" style="margin-top: 50px;">
+                <img src="tai_nguyen/gioithieu_logo.png" style="margin-top: 50px;">
                 <p style="font-style: italic;">Website được phát triển bởi congchiss.it@gmail.com</p>
             </div>
         </div>
