--- a/sanpham.html
+++ b/sanpham.html
@@ -23,7 +23,7 @@
     <!--KHU VỰC ĐẦU TRANG-->
     <header>
         <div class="logo">
-            <a href="index.html"><img src="tài nguyên/logo.png" alt="Mua điện thoại tại Smartphone QR"></a>
+            <a href="index.html"><img src="tai_nguyen/logoweb.png" alt="Mua điện thoại tại Smartphone QR"></a>
         </div>
         <div class="menu">
             <li><a href="danhmuc.html"><i class="fa-solid fa-mobile-screen"></i>Điện thoại</a></li>
@@ -68,6 +68,7 @@
 
             <li style="color:#E56662;"><i class="fa-solid fa-phone-volume" style="color: #E56662;"></i>Hotline:
                 0210.650.50.50</li>
+
         </div>
         <div class="menu-toggle">
             <i class="fa-solid fa-bars"></i>
@@ -80,8 +81,8 @@
 
                 </div>
             </li>
-            <li><a href=""><img src="tài nguyên/shop.png"></a></li>
-            <li><a href=""><img src="tài nguyên/user.png"></a></li>
+            <li><a href=""><img src="tai_nguyen/shopweb.png"></a></li>
+            <li><a href=""><img src="tai_nguyen/userweb.png"></a></li>
         </div>
     </header>
     <!--THANH ĐƯỜNG DẪN-->
@@ -110,12 +111,12 @@
                     <div class="product_content_right_cauhinh">
                         <p>Chọn phiên bản để xem giá</p>
                         <p>Màu sắc:</p>
-                        <img src="tài nguyên/coloriphone/trang.png">
-                        <img src="tài nguyên/coloriphone/den.png">
-                        <img src="tài nguyên/coloriphone/do.png">
-                        <img src="tài nguyên/coloriphone/hong.png">
-                        <img src="tài nguyên/coloriphone/xanhla.png">
-                        <img src="tài nguyên/coloriphone/xanhduong.png">
+                        <img src="tai_nguyen/coloriphone/trang.png">
+                        <img src="tai_nguyen/coloriphone/den.png">
+                        <img src="tai_nguyen/coloriphone/do.png">
+                        <img src="tai_nguyen/coloriphone/hong.png">
+                        <img src="tai_nguyen/coloriphone/xanhla.png">
+                        <img src="tai_nguyen/coloriphone/xanhduong.png">
                         <p>Bộ nhớ:</p>
                         <div class="product_content_right_cauhinh_bonho">
                             <p>128GB</p>
@@ -227,17 +228,18 @@
                 <input type="text" placeholder="Bạn cần tư vấn dịch vụ nào...">
                 <button>Đăng ký</button>
                 <h3><i class="fa-solid fa-link"></i>LIÊN KẾT</h3>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_fb.png"><a
-                        href="https://www.facebook.com/SmartphoneQuanRau" target="_blank">Smartphone Quân Râu</a></li>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_tiktok.jpg"><a
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_fb.png"><a
+                        href="https://www.facebook.com/SmartphoneQuanRau" target="_blank">Smartphone Quân Râu</a>
+                </li>
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_tiktok.jpg"><a
                         href="https://www.tiktok.com/@smartphone.quanrau?is_from_webapp=1&sender_device=pc"
                         target="_blank" style="font-style:italic;">Smartphone Quân Râu</a></li>
-                <li class="linksocial" style="font-style:italic;"><img src="tài nguyên/logo_zalo.png"><a href=""
+                <li class="linksocial" style="font-style:italic;"><img src="tai_nguyen/logo_zalo.png"><a href=""
                         target="_blank">0971776555</a>
                 </li>
             </div>
             <div class="footer_content_col">
-                <img src="tài nguyên/gioithieu_logo.png" style="margin-top: 50px;">
+                <img src="tai_nguyen/gioithieu_logo.png" style="margin-top: 50px;">
                 <p style="font-style: italic;">Website được phát triển bởi congchiss.it@gmail.com</p>
             </div>
         </div>
