--- a/sanpham.html
+++ b/sanpham.html
@@ -88,7 +88,8 @@
     <!--THANH ĐƯỜNG DẪN-->
     <div class="status_path">
         <i class="fa-solid fa-house"></i><a href="index.html">Trang chủ</a><i class="fa-solid fa-angles-right"></i><a
-            href="">Điện thoại</a><i class="fa-solid fa-angles-right"></i> <a href="sanpham.html">iPhone 13 128GB </a>
+            href="danhmuc.html">Điện thoại</a><i class="fa-solid fa-angles-right"></i> <a href="sanpham.html">iPhone 13
+            128GB </a>
     </div>
     <!--KHU VỰC SẢN PHẨM-->
     <section class="product">
@@ -123,12 +124,16 @@
                             <p>256GB</p>
                             <p>512GB</p>
                         </div>
-                        <p>Tình trạng: <span class="tinhtrang">Còn hàng</span></p>
-                        <p>Thời gian bảo hành:<span style="font-weight: bold; color:#E56662"> Bảo hành 24 tháng - Bảo
+                        <p>Tình trạng: <span class="tinhtrang" style="font-weight: bold; color:#9dc183">CÒN HÀNG
+                            </span>( Liên hệ tại góc trái màn hình để biết
+                            cơ
+                            sở còn hàng gần bạn nhất )</p>
+                        <p>Thời gian bảo hành:<span style="font-weight: bold; color:#ffd754;"> Bảo hành 24 tháng - Bảo
                                 hành cả rơi vỡ</span></p>
-                        <a href="">(Xem chi tiết)</a>
+                        <a href="">(Thông tin chi tiết)</a>
                         <p>Giao hàng tận nơi - Giao trong ngày đối với khách hàng tại Phú Thọ</p>
-                        <p style="font-style:italic; font-size: 16px;">Nhắn tin cho Shop để nhận được thời gian giao
+                        <p style="font-style:italic; font-size: 16px;">Liên hệ ngay để nhận được tư vấn và thời gian
+                            giao
                             hàng chính xác</p>
                         <p style="font-weight: bold; color:#E56662">Hotline: 0210.650.50.50</p>
 
