--- a/danhmuc.html
+++ b/danhmuc.html
@@ -7,7 +7,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styletext.css">
     <link rel="stylesheet" href="danhmuc.css">
-    <title>Smartphone Quân Râu</title>
+    <link rel="icon" type="image/png" href="tai_nguyen/logoweb.png">
+    <title>Tất cả sản phẩm</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <div id="chatButton" class="chat-button blink" onclick="togglePopup()">
         <i id="chaticon" class="fa-regular fa-comment fa-2xl"></i>
     </div>
-    <p class="text_chat">Liên hệ với chúng tôi tại đây!</p>
+    <p class="text_chat">ĐẶT HÀNG TẠI ĐÂY!</p>
     <div class="chat-popup" id="chatPopup">
         <a href="#"><img src="tai_nguyen/logo_zalo.png" alt="Zalo"> Zalo</a>
         <a href="#"><img src="tai_nguyen/logo_fb.png" alt="Điện thoại"> Facebook</a>
@@ -51,23 +52,23 @@
                                 src="san_pham/pkmt_head.png">Xem tất cả...</a></li>
                     <li class="category"><a href="danhmuc.html?category=Phụ kiện điện thoại">Phụ kiện điện thoại</a>
                     </li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Pin dự phòng"><img
-                                src="san_pham/pindp_head.jpg">Pin dự phòng</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Ốp lưng"><img
-                                src="san_pham/oplung_head.jpg">Ốp lưng</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Dây sạc"><img
-                                src="san_pham/daysac_head.jpg">Dây sạc</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Phụ kiện điện thoại"><img
+                    <li class="item"><a href="danhmuc.html?category=Pin dự phòng"><img src="san_pham/pindp_head.jpg">Pin
+                            dự phòng</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Ốp lưng"><img src="san_pham/oplung_head.jpg">Ốp
+                            lưng</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Dây sạc"><img src="san_pham/daysac_head.jpg">Dây
+                            sạc</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Phụ kiện điện thoại"><img
                                 src="san_pham/pkdt_head.jpg">Xem tất cả...</a></li>
                     <li class="category"><a href="danhmuc.html?category=Loa">Loa</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Loa Bluetooth"><img
+                    <li class="item"><a href="danhmuc.html?category=Loa Bluetooth"><img
                                 src="san_pham/loamini_head.jpg">Loa Bluetooth</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Loa kéo"><img
-                                src="san_pham/loakeo_head.jpg">Loa kéo</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Loa cho máy tính"><img
+                    <li class="item"><a href="danhmuc.html?category=Loa kéo"><img src="san_pham/loakeo_head.jpg">Loa
+                            kéo</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Loa cho máy tính"><img
                                 src="san_pham/loamt_head.png">Loa cho máy tính để bàn</a></li>
-                    <li class="item"><a href="danhmuc.html?category=Phụ kiện&subcategory=Loa"><img
-                                src="tai_nguyen/logoweb.png">Xem tất cả...</a></li>
+                    <li class="item"><a href="danhmuc.html?category=Loa"><img src="tai_nguyen/logoweb.png">Xem tất
+                            cả...</a></li>
                     <li class="category"><a href="danhmuc.html?category=PHỤ KIỆN">CÁC PHỤ KIỆN KHÁC</a>
                     </li>
                 </ul>
