--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styletext.css">
     <link rel="stylesheet" href="sanpham.css">
+    <link rel="icon" type="image/png" href="tai_nguyen/logoweb.png">
     <title>Smartphone Quân Râu</title>
 </head>
 
 <body>
-    <!--LOANDING-->
-    <div id="loading-screen">
-        <div class="loader"></div>
-        <p>Wait!!!</p>
-    </div>
     <!-- CHAT BUTTON-->
     <div id="chatButton" class="chat-button blink" onclick="togglePopup()">
         <i id="chaticon" class="fa-regular fa-comment fa-2xl"></i>
     </div>
-    <p class="text_chat">Liên hệ với chúng tôi tại đây!</p>
+    <p class="text_chat">ĐẶT HÀNG TẠI ĐÂY!</p>
     <div class="chat-popup" id="chatPopup">
         <a href="#"><img src="tai_nguyen/logo_zalo.png" alt="Zalo"> Zalo</a>
         <a href="#"><img src="tai_nguyen/logo_fb.png" alt="Điện thoại"> Facebook</a>
